<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/detail_pokemon"
    android:padding="20dp"
    android:clipToPadding="false"
    android:clipChildren="false"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarThumbVertical="@null"
    android:scrollbarThumbHorizontal="@null"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="50dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="16dp">

                <ImageView
                    android:id="@+id/img_item_photo"
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="16dp"
                    android:src="@android:color/darker_gray"/>

                <TextView
                    android:id="@+id/tv_set_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="@font/minecraft"
                    android:gravity="center"
                    android:text="@string/nama_pokemon"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />
            </LinearLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="16dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="30dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/elemen_tetap"
                        android:textSize="15sp"
                        android:textColor="@android:color/black"/>
                    <TextView
                        android:id="@+id/tv_elemen_set"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:text="@string/elemen"
                        android:textColor="@android:color/black"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="30dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ability_tetap"
                        android:textSize="15sp"
                        android:textColor="@android:color/black"/>
                    <TextView
                        android:id="@+id/tv_ability_set"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:text="@string/ability"
                        android:textColor="@android:color/black"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="30dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/makanan_tetap"
                        android:textSize="15sp"
                        android:textColor="@android:color/black"/>
                    <TextView
                        android:id="@+id/tv_makanan_set"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:text="@string/makanan"
                        android:textColor="@android:color/black"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/habitat_tetap"
                        android:textSize="15sp"
                        android:textColor="@android:color/black"/>
                    <TextView
                        android:id="@+id/tv_habitat_set"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:text="@string/habitat"
                        android:textColor="@android:color/black"/>
                </TableRow>


            </TableLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:clipToPadding="false"
            android:clipChildren="false"
            android:orientation="vertical">

            <TextView
                android:layout_marginLeft="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:text="@string/detaill"
                android:textColor="@android:color/black"/>
            
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:elevation="8dp"
                android:divider="@android:color/transparent"
                android:dividerHeight="0.0px"
                android:clipToPadding="false"
                android:clipChildren="false"
                card_view:cardElevation="10dp"
                card_view:cardPreventCornerOverlap="false">

                <TextView
                    android:padding="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/isi_konten"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"
                    android:justificationMode="inter_word"
                    android:id="@+id/tv_detail_pokemon">

                </TextView>

            </androidx.cardview.widget.CardView>
            <TextView
                android:layout_marginTop="18dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="24sp"
                android:text="Habitat"
                android:textColor="@android:color/black"/>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/habitat_gambar"
                android:layout_marginBottom="20dp"
                android:layout_width="340dp"
                android:layout_height="340dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/gunung"/>



        </LinearLayout>

    </LinearLayout>





</ScrollView>